# rbuilder-operator

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build.rs  config-live-example.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: checks.yaml  release.yaml
debian/: rbuilder-operator.service
etc/: config.toml.example
pkg/debian/: rbuilder.service
src/: best_bid_ws.rs  blocks_processor.rs  build_info.rs  flashbots_config.rs  flashbots_signer.rs  lib.rs  metrics.rs  reconnect.rs  signed_http_client.rs
src/bidding_service_wrapper/: bidding_service.rs  conversion.rs  mod.rs
src/bidding_service_wrapper/client/: bidding_service_client_adapter.rs  mod.rs  slot_bidder_client.rs  unfinished_block_building_sink_client.rs
src/bidding_service_wrapper/proto/: bidding_service.proto
src/block_descriptor_bidding/: bid_maker_adapter.rs  bidding_service_adapter.rs  block_registry.rs  mock_bidding_service.rs  mock_slot_bidder.rs  mod.rs  slot_bidder_adapter.rs  traits.rs  unfinished_block_building_sink_adapter.rs
src/true_block_value_push/: best_true_value_observer.rs  best_true_value_pusher.rs  best_true_value_redis.rs  blocks_processor_backend.rs  mod.rs  redis_backend.rs  unfinished_block_building_sink_factory_wrapper.rs  unfinished_block_building_sink_wrapper.rs
